Stops line-breaks in site menu

--- a/source/stylesheets/page/_header.scss
+++ b/source/stylesheets/page/_header.scss
@@ -33,6 +33,7 @@
     border-right: 1px solid rgba(255, 255, 255, .3);
     color: #fff;
     text-transform: uppercase;
+    white-space: nowrap;
   }
 
   .nav__item--active a,
